--- a/templates/property_tags_list.html
+++ b/templates/property_tags_list.html
@@ -12,7 +12,7 @@
                     <p class="text-muted">Manage tags for categorizing authorized properties</p>
                 </div>
                 <div>
-                    <a href="{{ url_for('inventory.inventory_unified', tenant_id=tenant.tenant_id) }}#publishers-tab"
+                    <a href="{{ url_for('inventory.inventory_browser', tenant_id=tenant.tenant_id) }}#publishers-tab"
                        class="btn btn-outline-secondary">
                         <i class="fas fa-arrow-left"></i> Back to Publishers & Properties
                     </a>
