fix: 'Select All' buttons in Create Product page by fixing JS scope

--- a/templates/add_product_gam.html
+++ b/templates/add_product_gam.html
@@ -2229,6 +2229,9 @@ function filterGAMFormats() {
         });
     }
 })();
+</script>
+{% endif %}
+<script>
 
 // Initialize pricing options on page load
 {% if product %}
@@ -2456,7 +2459,6 @@ function showToast(message, type = 'info') {
         </div>
     </div>
 </div>
-{% endif %}
 
 <style>
 /* Size chips styling */
